tests/paczka1/small_fuzzy/22752746.err
Error in line 1: EWV7lkefgv A862 15,4
Error in line 2: JrOaFcF4Ef S297 67,7
Error in line 6: EWV7lkefgv S297 96,7
